# master_thesis

./: .gitignore  ENV.py  LLM_jsonify.py  README.md  environment.yml  executed_configs.py  gpu_checker.py  main.py  main_restart.py  policy.py  pyproject.toml
config/: BlockedUnlock.json  Debug.json  Interval_Conversation.json
config/base/: Command.json  Conversation.json  General.json  Gpt-4o-Sub.json  Gpt-4o-Vision.json  Gpt-4o-mini-Vision.json  Gpt-4o-mini.json  Gpt-4o.json  Llama3.1-70B.json  Llama3.1-8B.json  Llama3.2-11B.json  Llava-8B.json  Message-OneSide.json  Message-TwoSide.json  Reflexion.json  Simple.json  SimpleSubgoal.json  Subgoal.json
logger/: logger.py  movie_maker.py
utils/: babyai_utils.py  data_utils.py  embedding_utils.py  env_utils.py  llm_utils.py  policy_utils.py  reflexion_utils.py  run_reflexion.py  subgoal_visualizer.py  utils.py
