[project]
name = "llm-rl-babyai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "blosc>=1.11.3",
    "gym==0.26.2",
    "gym-minigrid==1.2.2",
    "gymnasium>=1.2.2",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.7",
    "multiprocess>=0.70.18",
    "numpy<2.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "sentry-sdk>=2.46.0",
    "setproctitle>=1.3.7",
    "setuptools>=80.9.0",
    "termcolor>=3.2.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]
